# brad

./: .git-blame-ignore-revs  .gitignore  .gitmodules  LICENSE  README.md  expts.sh  generate_imdb_workload.py  load_baseline.py  mypy.ini  pylintrc  pyproject.toml  readme_cost_model.md  readme_submission.md  run_cost_model.py  run_tidb.py  setup.py
cirrus/: .gitignore  CMakeLists.txt  README.md  connection.cc  connection.h  main.cc  tpch_scale.cc
cirrus/datasets/: store.cc  store.h
cirrus/exe/: driver.cc  store_gen.cc  store_sale.cc  tpch_s3.cc  tpch_scale.cc
cirrus/experiments/: experiment_config_example.sh
cirrus/experiments/01-scaling/: COND  run_redshift.sh
cirrus/experiments/02-postgres/: COND
cirrus/experiments/03-postgres2/: COND
cirrus/experiments/04-postgres3/: COND  run_postgres.sh  run_postgres_replica.sh
cirrus/experiments/05-both/: COND  run_both.sh
cirrus/motiv/: .gitignore  CMakeLists.txt
cirrus/motiv/cirrus/: CMakeLists.txt  cirrus_impl.cc  cirrus_impl.h  cirrus_impl_wide.cc  connector.cc  connector.h  odbc.cc  odbc.h  table_version.cc  table_version.h
cirrus/motiv/config/: CMakeLists.txt  config.cc  dbtype.cc  stats.cc  strategy.cc
cirrus/motiv/dataset_admin/: CMakeLists.txt  column_gen.cc  column_gen.h  dataset_admin.cc  dataset_admin.h  dataset_admin_main.cc  example_config.yml
cirrus/motiv/datasets/: CMakeLists.txt  inventory_wide.yml  store.cc  store.h  store_wide.yml
cirrus/motiv/experiments/01-import/: COND  run.sh
cirrus/motiv/include/cirrus/: cirrus.h  config.h  dbtype.h  stats.h  strategy.h  workloads.h
cirrus/motiv/tests/: CMakeLists.txt  cirrus.cc
cirrus/motiv/utils/: CMakeLists.txt  affinity.h  sf.h  thread_pool.cc  thread_pool.h
cirrus/motiv/workloads/: CMakeLists.txt  bench_import.cc  bench_ivm.cc  gen_store.cc  latency_manager.h  run_store.cc  run_wide.cc  state.h  workload_base.cc  workload_base.h  write_logger.cc  write_logger.h
cirrus/motiv/workloads/inventory_wide/: CMakeLists.txt  inventory_etl.cc  inventory_make_sale.cc  inventory_stock.cc  inventory_wide.h
cirrus/motiv/workloads/store/: CMakeLists.txt  store.h  store_make_sale.cc  store_reporting.cc  store_stock_feature.cc
cirrus/scaling/: .gitignore
cirrus/scaling/datasets/: store.h
cirrus/scaling/exe/: store_etl_test.cc  tpch_s3.cc
cirrus/scaling/experiments/01-scaling/: run_aurora.sh  run_redshift.sh
cirrus/scaling/experiments/02-postgres/: COND  run_postgres.sh
cirrus/scaling/experiments/04-postgres3/: COND
cirrus/scaling/experiments/05-both/: COND  run_both.sh
cirrus/scaling/experiments/06-combine/: COND
cirrus/scaling/utils/: backoff_manager.h  connection.cc  connection.h  dbtype.h
cirrus/scaling/workloads/: state.h  store.h  store_make_sale.cc  store_reporting.cc  tpch.h  workload_base.cc  workload_base.h
cirrus/scripts/: store_to_s3.sh  tpch_to_s3.sh
cirrus/utils/: CMakeLists.txt  config.cc  config.h  connection.cc  connection.h  dbtype.cc  dbtype.h  latency_manager.h  sf.h  tpch_s3.cc
cirrus/workloads/: CMakeLists.txt  state.h  store.cc  store.h  store_etl.cc  store_make_sale.cc  store_reporting.cc  tpch.cc  tpch.h  workload_base.cc  workload_base.h
config/: baseline.sample.yml  config_sample.yml  physical_config_sample.yml  planner.yml  planner_baseline.yml  system_config.yml  system_config_demo.yml  system_config_demo2.yml  system_config_demo_s1.yml  system_config_demo_s2.yml  system_config_demo_s3.yml  temp_config_sample.yml  test_schema.yml  tidb.sample.yml
cpp/: CMakeLists.txt  Makefile  brad_front_end.cc  brad_front_end.h  brad_server_cli.cc  flight_sql_example_client.cc  flight_sql_server.cc  my_test.cc
cpp/example/: CMakeLists.txt  brad_server.cc  brad_server.h  brad_sql_info.cc  brad_statement.h  brad_statement_batch_reader.cc  brad_statement_batch_reader.h  brad_tables_schema_batch_reader.cc  brad_tables_schema_batch_reader.h  main.cc  sqlite_sql_info.h  sqlite_statement.cc  sqlite_statement_batch_reader.h
cpp/experimental/: CMakeLists.txt  brad.grpc.pb.cc  brad.grpc.pb.h  brad.pb.cc  brad.pb.h  proxy_socket.cc
cpp/pybind/: brad_server.cc
cpp/server/: CMakeCache.txt  Makefile  brad_example  brad_server.cc  brad_server.h  brad_server_simple.cc  brad_server_simple.h  brad_sql_info.cc  brad_sql_info.h  brad_statement.cc  brad_statement.h  brad_statement_batch_reader.cc  brad_statement_batch_reader.h  brad_tables_schema_batch_reader.cc  brad_tables_schema_batch_reader.h  cmake_install.cmake  python_utils.cc  python_utils.h
cpp/sqlite_server/: sqlite_statement.h  sqlite_type_info.cc
docker/: Dockerfile  README.md  setup.sh  start.sh  vars.sh
experiments/03-python-overhead/: CMakeLists.txt  COND  main.cc  run_cpp.py  run_iohtap.py
flight_sql_example/: CMakeLists.txt  test_server_cli.cc
flight_sql_example/example/: acero_main.cc  acero_server.cc  acero_server.h  sqlite_server.cc  sqlite_server.h  sqlite_sql_info.cc
minimal_arrow_build/: .gitignore  CMakeLists.txt  Makefile  arrow_example.cc
proto/: blueprint.proto  brad.proto  interface.proto
sandbox/qe/: Cargo.toml  build.rs  build_bindings.rs  redshift.py  test.csv  test2.parquet  tpch-every.sh  tpch-individual.sh  tpch-setup.sh  tpch.sh
sandbox/qe/RadixSplineLib/: headers.hpp  radixspline.cpp  radixspline.h  radixspline.hpp  radixsplino  run.cpp  test.cpp  test.hpp
sandbox/qe/src/: datafusion_state.rs  lib.rs  radixspline.rs  rewrite.rs
sandbox/qe/src/dataset_gen/: emps_depts.rs  mod.rs  tpch.rs
sandbox/qe/src/ops/: filter.rs  inner_hash_join.rs  mod.rs  tap.rs
sandbox/qe/src/rules/: add_custom_filter.rs  add_tap.rs  mod.rs
sandbox/qe/tpch/: column_to_binary.py  csv_to_parquet.py  headers.json  load_tpch.sql  tbl_to_csv.py
sandbox/qe/tpch/queries/: 1.sql  10.sql  11.sql  12.sql  13.sql  14.sql  15.sql  16.sql  17.sql  18.sql  19.sql  2.sql  20.sql  21.sql  22.sql  3.sql  4.sql  5.sql  6.sql  7.sql  8.sql  9.sql  combined.sql
tests/: test_always_routing.py  test_aurora_scoring.py  test_blueprint_diff.py  test_blueprint_serde.py  test_constant_forecaster.py  test_data_planning.py  test_data_sync_converter.py  test_monitor.py  (+19 more)
(+1421 files in other folders)
