[package]
name = "brad_qe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "*", features = ["full"] }
clap = { version = "*", features = ["derive"] }
datafusion = "36.0.0"
futures = "0.3.21"
arrow = "50.0.0"
rustyline = "10.0.0"
rand = { version = "0.8.5", features = ["small_rng"] }

[[bin]]
name = "brad_qe_repl"
path = "src/bin/repl.rs"
