[package]
name = "brad_qe"
version = "0.1.0"
edition = "2021"
# NOTE: This currently does not work. (C++ standard library linking error)
# build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "*", features = ["full"] }
clap = { version = "*", features = ["derive"] }
datafusion = "36.0.0"
futures = "0.3.21"
arrow = "50.0.0"
rustyline = "10.0.0"
rand = { version = "0.8.5", features = ["small_rng"] }
csv = "1.3.0"
cty = "0.2.2"

[build-dependencies]
bindgen = "0.69.4"
cc = "1.0.96"

[[bin]]
name = "bench_q3"
path = "src/bin/bench_q3.rs"

[[bin]]
name = "brad_qe_repl"
path = "src/bin/repl.rs"

# [[bin]]
# name = "test_radixspline"
# path = "src/bin/test_radixspline.rs"
